kubernetes/apps/traefik/traefik/app/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
  # plugin:
  #     cloudflarewarp:
  #         disableDefault: "false"
  #         trustip:
  #           - 10.0.0.0/8
  #           - 172.16.0.0/12
  #           - 192.168.0.0/16
  #           - 65.109.70.17/32
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia
  labels:
    app.kubernetes.io/instance: 'authelia'
    app.kubernetes.io/name: 'authelia'
spec:
  forwardAuth:
    address: 'http://authelia.default.svc.cluster.local/api/authz/forward-auth'
    authResponseHeaders:
      - 'Remote-User'
      - 'Remote-Groups'
      - 'Remote-Email'
      - 'Remote-Name'
